Move context to Data folder, rename parameters in services

--- a/Checkr/appsettings.json
+++ b/Checkr/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=SERVERNAMEGOESHERE;Database=DBNAMEGOESHERE;Trusted_Connection=True;TrustServerCertificate=True"
+    "ApplicationDbContext": "Server=SERVERNAMEGOESHERE;Database=Checkr;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
